infra/k8s-prod/assets-postgres-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: assets-postgres-depl
spec:
  selector:
    matchLabels:
      app: postgres-depl
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: postgres-depl
    spec:
      containers:
        - name: postgres-depl
          image: postgres:15
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-storage
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: assets-postgres-srv
spec:
  ports:
    - port: 5432
  selector:
    app: postgres-depl
  type: ClusterIP
